# cs5393-002_project4

./: CMakeLists.txt  README.md  documentparser.cpp  documentparser.h  documentparsertest.cpp  dsavltree.h  dsavltreetest.cpp  dshashtest.cpp  hash.h  howtorun.txt  indexhandler.cpp  indexhandler.h  indexhandlertest.cpp  main.cpp  porterstemmer2.cpp  porterstemmer2.h  queryprocessor.cpp  queryprocessor.h  queryprocessortest.cpp  rapidJSONex.cpp  sampledata.txt  searchengine.cpp  searchengine.h  userinterface.cpp  userinterface.h
